make redirect on http request

--- a/nginx/lightsail_nginx.conf
+++ b/nginx/lightsail_nginx.conf
@@ -3,24 +3,7 @@
     server {
         listen       80;
         server_name  localhost;
-
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-        include "/opt/bitnami/nginx/conf/bitnami/phpfastcgi.conf";
-
-        include "/opt/bitnami/nginx/conf/bitnami/bitnami-apps-prefix.conf";
-
-        location ~* \.(?:jpg|webp|jpeg|svg)$ {
-            expires 1h;
-            access_log off;
-            add_header Cache_Control "public";
-        }
-
-        location ~* \.(?:css|js)$ {
-            expires 1M;
-            access_logoff;
-            add_header Cache-Control "public";
-        }
+        return 301 https://$host$request_uri;
     }
 
 # HTTPS server
@@ -41,9 +24,19 @@
        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
        include "/opt/bitnami/nginx/conf/bitnami/phpfastcgi.conf";
-
        include "/opt/bitnami/nginx/conf/bitnami/bitnami-apps-prefix.conf";
-    }
 
+       location ~* \.(?:jpg|webp|jpeg|svg)$ {
+           expires 1h;
+           access_log off;
+           add_header Cache_Control "public";
+       }
+
+       location ~* \.(?:css|js)$ {
+           expires 1M;
+           access_logoff;
+           add_header Cache-Control "public";
+       }
+    }
 
     include "/opt/bitnami/nginx/conf/bitnami/bitnami-apps-vhosts.conf";
